[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/black_background.png" type="Texture" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 1 )

[node name="ResetButton" type="Button" parent="."]
visible = false
margin_left = 296.0
margin_top = 546.0
margin_right = 1574.0
margin_bottom = 1067.0
text = "Return To Title Screen"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 747.0
margin_right = 434.0
margin_bottom = 32.0
alignment = 1

[node name="Tutorial" type="Label" parent="VBoxContainer"]
margin_right = 434.0
margin_bottom = 14.0
text = "Space to Shoot. Enter to Charge Power. Power Decreases on Release"

[node name="AngleLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 434.0
margin_bottom = 32.0
text = "Angle: X"

[node name="ProjectilesLeftLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 434.0
margin_bottom = 50.0
text = "Projectiles: X"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 434.0
margin_bottom = 68.0
text = "Score: X"

[node name="PowerMeter" type="VScrollBar" parent="."]
margin_left = 13.0
margin_top = 786.0
margin_right = 25.0
margin_bottom = 1572.0
rect_rotation = 180.0
min_value = 100.0
max_value = 500.0
value = 100.0

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="MainMenu"]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 875.0
margin_top = 214.0
margin_right = 977.0
margin_bottom = 228.0
text = "WORKING TITLE"
align = 1

[node name="StartButton" type="Button" parent="MainMenu"]
anchor_right = 47.95
anchor_bottom = 26.95
margin_left = 669.0
margin_top = 423.0
margin_right = -661.0
margin_bottom = -501.0
text = "PUSH TO START"
icon_align = 1
